--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-size: 1.2rem;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     min-height: 4000px;
 }
 
@@ -59,7 +59,7 @@ body {
 }
 
 .hero p {
-    font-size: 1.4rem
+    font-size: 1.3rem
 }
 
 .hero a {
