--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(img/hero.jpg);
+    background-image: url(img/hero.webp);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
