--- a/style.css
+++ b/style.css
@@ -324,6 +324,8 @@ footer li {
     html {
         font-size: 75%;
     }
+    
+    
 }
 
 /* tablet */
@@ -336,6 +338,24 @@ footer li {
         font-size: 1.7rem;
         text-align: center;
     }
+
+    .couple .col-lg-6 {
+        margin-bottom: 1.5rem; /* Berikan jarak antara kedua div */
+      }
+
+      .rsvp button {
+        font-size: 1.5rem;
+        margin-bottom: 2px;
+      }
+      /* .rsvp button {
+        font-size: 1.5rem;
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        padding: 5px 10px 5px 10px;
+        margin-bottom: 100px; Tambahkan jarak bawah
+        margin-right: 8px;
+      } */
 }
 
 /* mobile */
