--- a/style.css
+++ b/style.css
@@ -416,3 +416,96 @@ footer li {
         font-size: 60%;
     }
 }
+
+/* Tambahan untuk mencegah pengaruh dark mode OS */
+@media (prefers-color-scheme: dark) {
+    :root {
+        --gold: #FFB22C;
+        --bg: #0a0a0a;
+        --shadow: 0 2px 2px rgba(0, 0, 0, 0.5);
+    }
+
+    body,
+    .info,
+    .rsvp {
+        background-color: white !important;
+        color: black !important;
+    }
+
+    .hero::before {
+        filter: grayscale();
+    }
+
+    .hero::after {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    .mynavbar,
+    .info .card {
+        background-color: rgba(255, 255, 255, 0.2) !important;
+        color: white !important;
+    }
+
+    .info .card-header,
+    .info .card-footer,
+    .info .card-body,
+    .info .description,
+    .info .album {
+        color: white !important;
+    }
+
+    .gallery {
+        background-color: #f5f5f5 !important;
+        color: #444 !important;
+    }
+
+    .gallery span {
+        color: #fb9494 !important;
+    }
+
+    .gallery p,
+    .rsvp p,
+    .info span {
+        color: #444 !important;
+    }
+
+    .rsvp {
+        background-color: var(--bg) !important;
+        color: white !important;
+    }
+
+    .rsvp p,
+    .rsvp form label {
+        color: white !important;
+    }
+
+    .rsvp button {
+        background-color: var(--gold) !important;
+        color: white !important;
+        border-color: var(--gold) !important;
+    }
+
+    .rsvp button:hover {
+        background-color: white !important;
+        color: var(--gold) !important;
+        border-color: white !important;
+    }
+
+    footer {
+        background-color: var(--gold) !important;
+        color: white !important;
+    }
+
+    footer a {
+        color: var(--bg) !important;
+    }
+
+    footer a:hover {
+        color: white !important;
+    }
+
+    .audio-icon-wrapper {
+        color: white !important;
+        background-color: rgba(0, 0, 0, 0.3) !important;
+    }
+}
